--- a/package.json
+++ b/package.json
@@ -1,40 +1,36 @@
 {
   "name": "@terrakube/mcp-server-terrakube",
-  "version": "1.0.5",
-  "description": "Model Context Protocol tools for Terrakube operations",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "1.0.11",
+  "description": "Terrakube Model Context Protocol Server",
   "type": "module",
+  "main": "dist/index.js",
   "bin": {
-    "mcp-server-terrakube": "./dist/index.js"
+    "mcp-server-terrakube": "dist/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && chmod +x dist/index.js",
     "start": "node dist/index.js",
-    "dev": "ts-node-esm src/index.ts",
     "prepublishOnly": "npm run build"
   },
-  "keywords": [
-    "mcp",
-    "terrakube",
-    "terraform",
-    "tools"
+  "files": [
+    "dist",
+    "README.md"
   ],
-  "author": "Terrakube",
-  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.7.0",
-    "axios": "^1.6.7",
-    "debug": "^4.3.4",
-    "dotenv": "^16.4.7",
-    "uuid": "^9.0.1",
+    "@modelcontextprotocol/sdk": "^1.0.0",
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.12",
-    "@types/node": "^20.11.19",
-    "@types/uuid": "^9.0.8",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@types/node": "^20.8.10",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
